Fix sidebar item gap

--- a/multi-step-form/src/components/_layout.scss
+++ b/multi-step-form/src/components/_layout.scss
@@ -144,6 +144,7 @@ main {
     border-radius: unset;
     background-position-y: 0px;
     min-height: 200px;
+    gap: $space-4;
 
     .formStep {
       padding-inline: unset;
